# fastapi-tutorial

./: pyproject.toml
fastapi_tutorial/: 10_cookie_header_param.py  11_response_model.py  12_extra_models.py  15_request_files.py  1_body.py  2_main_parameter.py  3_main_parameter_string.py  4_main_parameter_numeric.py  7_body_nested.py  8_main_schema.py  8_schema.py  main.py
