[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["Toshi-Yano <t.yano.0726.6119@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.109.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
